[package]
name = "yew-app"
version = "0.1.0"
authors = ["Atsushi Kikuchi <nzlhl1d19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
strum = "0.20.0"
strum_macros = "0.20.1"
serde = "1"
serde_derive = "1"